@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-30T08:09:08Z",
-  "count_outdated" : 1331,
-  "uniques_outdated" : 716,
+  "timestamp" : "2023-08-30T16:08:37Z",
+  "count_outdated" : 1333,
+  "uniques_outdated" : 717,
   "count" : 1340,
   "uniques" : 722,
   "clones" : [
-    {
-      "timestamp": "2023-08-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-08-17T00:00:00Z",
       "count": 2,
