@@ -1,3 +1,12 @@
+2023-08-30T16:08:37Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6027333839 # 1870
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-30
+* notice: last 14d: unq all: 2 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 716 1331 / 722 1340
+* notice: next accum: outdated-unq outdated-all / unq all: 717 1333 / 722 1340
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-08-16] / []
+
 2023-08-30T08:09:08Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6022255461 # 1869
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-30
